--- a/trunk/default_templates_fa/individual_entry_archive.tmpl
+++ b/trunk/default_templates_fa/individual_entry_archive.tmpl
@@ -171,7 +171,7 @@
                                     <div id="name-email">
                                        <p>
                                           <label for="comment-author"><MT_TRANS phrase="Name">:</label>
-                                          <input id="comment-author" name="author" size="30" />
+                                          <input id="comment-author" name="author" size="30" onkeypress="PersianKeyPress(event)" onkeydown="PersianKeyDown(event)" />
                                        </p>
                                        <p>
                                           <label for="comment-email"><MT_TRANS phrase="Email Address">:</label>
@@ -192,7 +192,7 @@
 
                                  <p id="comments-open-text">
                                     <label for="comment-text"><MT_TRANS phrase="Comments">: <MTIfAllowCommentHTML><MT_TRANS phrase="(you may use HTML tags for style)"></MTIfAllowCommentHTML></label>
-                                    <textarea id="comment-text" name="text" rows="15" cols="50"></textarea>
+                                    <textarea onkeypress="PersianKeyPress(event)" onkeydown="PersianKeyDown(event)" id="comment-text" name="text" rows="15" cols="50"></textarea>
                                  </p>
                                  <div id="comments-open-footer" class="comments-open-footer">
                                     <input type="submit" accesskey="v" name="preview" id="comment-preview" value="<MT_TRANS phrase="Preview">" />
